[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/components/register_panel.gd" type="Script" id=1]

[node name="RegisterPanel" type="VBoxContainer"]
margin_right = 500.0
margin_bottom = 312.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
margin_right = 500.0
margin_bottom = 28.0
text = "Register:"

[node name="Username" type="HBoxContainer" parent="."]
margin_top = 48.0
margin_right = 500.0
margin_bottom = 86.0

[node name="Label" type="Label" parent="Username"]
margin_top = 5.0
margin_right = 230.0
margin_bottom = 33.0
rect_min_size = Vector2( 230, 0 )
text = "Username: "

[node name="UsernameInput" type="LineEdit" parent="Username"]
unique_name_in_owner = true
margin_left = 250.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3

[node name="Password" type="HBoxContainer" parent="."]
margin_top = 106.0
margin_right = 500.0
margin_bottom = 144.0

[node name="Label" type="Label" parent="Password"]
margin_top = 5.0
margin_right = 230.0
margin_bottom = 33.0
rect_min_size = Vector2( 230, 0 )
text = "Password: "

[node name="PasswordInput" type="LineEdit" parent="Password"]
unique_name_in_owner = true
margin_left = 250.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
secret = true

[node name="ConfirmPassword" type="HBoxContainer" parent="."]
margin_top = 164.0
margin_right = 500.0
margin_bottom = 202.0

[node name="Label" type="Label" parent="ConfirmPassword"]
margin_top = 5.0
margin_right = 230.0
margin_bottom = 33.0
rect_min_size = Vector2( 230, 0 )
text = "Confirm Password: "

[node name="ConfirmPasswordInput" type="LineEdit" parent="ConfirmPassword"]
unique_name_in_owner = true
margin_left = 250.0
margin_right = 500.0
margin_bottom = 38.0
size_flags_horizontal = 3
secret = true

[node name="Notification" type="Label" parent="."]
unique_name_in_owner = true
margin_top = 222.0
margin_right = 500.0
margin_bottom = 250.0

[node name="Register" type="Button" parent="."]
margin_top = 270.0
margin_right = 500.0
margin_bottom = 304.0
size_flags_horizontal = 3
text = "Register"

[node name="Back" type="Button" parent="."]
margin_top = 324.0
margin_right = 500.0
margin_bottom = 358.0
size_flags_horizontal = 3
text = "Back"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="Register" to="." method="_on_Register_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
